--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/ic_logo" />
+        android:src="@drawable/imgpsh_fullsize_2" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
