--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -106,7 +106,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="Name"
+                        android:text="First Name"
                         android:textColor="#000000" />
 
                     <!--<TextView-->
@@ -119,6 +119,36 @@
                     <!--android:textColor="#8470ff" />-->
                     <EditText
                         android:id="@+id/myName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:textColor="@color/black" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:padding="5dip">
+
+                    <TextView
+                        android:layout_weight="1"
+                        android:background="#fff"
+                        android:gravity="left"
+                        android:padding="5dip"
+                        android:text="Last Name"
+                        android:textColor="#000000" />
+
+                    <!--<TextView-->
+                    <!--android:id="@+id/myName"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:background="#fff"-->
+                    <!--android:gravity="left"-->
+                    <!--android:padding="5dip"-->
+                    <!--android:text="Quang"-->
+                    <!--android:textColor="#8470ff" />-->
+                    <EditText
+                        android:id="@+id/myNameLast"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
@@ -205,7 +235,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:hint="dd/mm/yyyy"/>
                 </TableRow>
                 //row3
 
@@ -237,7 +268,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:hint="cm"/>
                 </TableRow>
                 //row4
 
@@ -253,7 +285,7 @@
                         android:background="#fff"
                         android:gravity="left"
                         android:padding="5dip"
-                        android:text="Address"
+                        android:text="City"
                         android:textColor="#000000" />
 
                     <!--<TextView-->
@@ -269,7 +301,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -300,7 +333,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        />
                 </TableRow>
 
                 <TextView
@@ -343,7 +377,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        />
                 </TableRow>
 
                 <TableRow
