--- a/android/app/src/main/res/layout/new_items.xml
+++ b/android/app/src/main/res/layout/new_items.xml
@@ -10,9 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/margin10"
-        app:cardMaxElevation="@dimen/margin10"
-        app:contentPadding="5dp"
+        app:cardElevation="2dp"
+        app:cardMaxElevation="2dp"
+        app:contentPaddingLeft="1dp"
+        app:contentPaddingTop="1dp"
+        app:contentPaddingRight="1dp"
+        app:contentPaddingBottom="2dp"
         app:cardBackgroundColor="@color/cardview_shadow_start_color"
         >
         <RelativeLayout
