--- a/android/app/src/main/res/layout/new_transaction.xml
+++ b/android/app/src/main/res/layout/new_transaction.xml
@@ -11,7 +11,12 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/cardview_shadow_start_color"
         app:cardCornerRadius="5dp"
-        app:contentPadding="5dp">
+        app:cardElevation="2dp"
+        app:cardMaxElevation="2dp"
+        app:contentPaddingLeft="1dp"
+        app:contentPaddingTop="1dp"
+        app:contentPaddingRight="1dp"
+        app:contentPaddingBottom="2dp">
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
@@ -26,8 +31,9 @@
                 android:layout_centerHorizontal="true"
                 android:text="transaction"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="normal" />
+                android:textSize="17sp"
+                android:textStyle="normal"
+                android:padding="10dp"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
