--- a/android/app/src/main/res/layout/new_items.xml
+++ b/android/app/src/main/res/layout/new_items.xml
@@ -34,8 +34,7 @@
                 android:paddingRight="5dp"
                 android:paddingLeft="5dp"
                 app:civ_border_width="3dp"
-                app:civ_border_color="#d4d3d3"
-                android:src="@drawable/im1" />
+                app:civ_border_color="#d4d3d3" />
 
             <TextView
                 android:id="@+id/tvName"
