--- a/server/src/main/webapp/app/home/home.component.html
+++ b/server/src/main/webapp/app/home/home.component.html
@@ -16,5 +16,8 @@
                 <span>Vui lòng đăng nhập.</span>
             </div>
         </div>
+        <div class="alert alert-info" >
+            Tải file ứng dụng để cài đặt trên di động <a href="https://drive.google.com/file/d/112QUSyM4WxDJrmN4WNoOfXyW0_L6BSL1/view?usp=sharing">tại đây</a>
+        </div>
     </div>
 </div>
